--- a/index.html
+++ b/index.html
@@ -1,74 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Puppy Page</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      display: flex;
-      background-color: #121212;
-      color: white;
-      font-family: Arial, sans-serif;
-    }
-
-    .content {
-      flex: 1;
-      padding: 20px;
-    }
-
-    .sidebar {
-      width: 150px;
-      background-color: #1e1e1e;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding-top: 20px;
-      position: fixed;
-      right: 0;
-      top: 0;
-      bottom: 0;
-    }
-
-    .sidebar img {
-      width: 120px;
-      height: 120px;
-      object-fit: cover;
-      margin-bottom: 20px;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: transform 0.2s;
-    }
-
-    .sidebar img:hover {
-      transform: scale(1.05);
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Puppy Page</title>
+<style>
+body {
+    margin: 0;
+    background: #111;
+    color: #fff;
+    font-family: Arial, sans-serif;
+}
+#menu {
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 150px;
+    height: 100vh;
+    background: #222;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20px;
+    box-shadow: -3px 0 10px rgba(0,0,0,0.5);
+}
+#menu img {
+    width: 120px;
+    margin: 15px 0;
+    border-radius: 8px;
+    cursor: pointer;
+}
+#content {
+    padding: 30px;
+    width: calc(100% - 150px);
+}
+</style>
 </head>
 <body>
-  <div class="content">
-    <h1>Puppy Page</h1>
-    <p>Click any puppy on the right to browse puppies online.</p>
-  </div>
-
-  <div class="sidebar">
-    <a href="https://puppies.com/find-a-puppy/saint-bernard?advanced=true&price=100&price=700&sort_breed=mixed" target="_blank">
-      <img src="saint-bernard.png" alt="Saint Bernard" />
+<div id="menu">
+    <a href="https://puppies.com/find-a-puppy/saint-bernard?advanced=true&price=100&price=700&sort_breed=mixed">
+        <img src="saint-bernard.png" alt="Saint Bernard" />
     </a>
-
-    <a href="https://puppies.com/find-a-puppy/english-bulldog?advanced=true&price=100&price=700&sort_breed=mixed" target="_blank">
-      <img src="english-bulldog.png" alt="English Bulldog" />
+    <a href="https://puppies.com/find-a-puppy/english-bulldog?advanced=true&price=100&price=700&sort_breed=mixed">
+        <img src="english-bulldog.png" alt="English Bulldog" />
     </a>
-
-    <a href="https://puppies.com/find-a-puppy/basset-hound?advanced=true&price=100&price=700&sort_breed=mixed" target="_blank">
-      <img src="basset-hound.png" alt="Basset Hound" />
+    <a href="https://puppies.com/find-a-puppy/basset-hound?advanced=true&price=100&price=700&sort_breed=mixed">
+        <img src="basset-hound.png" alt="Basset Hound" />
     </a>
-
-    <a href="https://puppies.com/find-a-puppy/cavalier-king-charles-spaniel?advanced=true&price=100&price=700&sort_breed=mixed" target="_blank">
-      <img src="cav.png" alt="Cavalier King Charles Spaniel" />
+    <a href="https://puppies.com/find-a-puppy/cavalier-king-charles-spaniel?advanced=true&price=100&price=700&sort_breed=mixed">
+        <img src="cav.png" alt="Cavalier King Charles Spaniel" />
     </a>
-  </div>
+</div>
+
+<div id="content">
+    <h1>Welcome to Puppy Page</h1>
+    <p>Click the puppies on the right to explore available listings.</p>
+</div>
 </body>
 </html>
